@@ -1,4 +1,4 @@
-/* $Id: actions.c,v 1.35 2011/10/22 09:05:02 imilh Exp $ */
+/* $Id: actions.c,v 1.36 2011/10/23 11:46:58 imilh Exp $ */
 
 /*
  * Copyright (c) 2009, 2010, 2011 The NetBSD Foundation, Inc.
@@ -409,7 +409,7 @@ pkgin_install(char **opkgargs, uint8_t do_inst)
 		/* if package is not already downloaded or size mismatch, d/l it */
 		if ((stat(pkgpath, &st) < 0 || st.st_size != pimpact->file_size) &&
 			/* don't update file_size if repo is file:// */
-			strncmp(pkgpath, SCHEME_FILE, strlen(SCHEME_FILE) == 0))
+			strncmp(pkgpath, SCHEME_FILE, strlen(SCHEME_FILE) != 0))
 				file_size += pimpact->file_size;
 
 		size_pkg += pimpact->size_pkg;
